# finotif

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
.github/: .env.github
.github/workflows/: build.yml  docker-build.yml  run-tests.yml
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/tests/: test_settings.py
finotif/notifications/: admin.py  apps.py  models.py  schemas.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
finotif/notifications/migrations/: 0001_initial.py
finotif/notifications/tests/: conftest.py  test_api.py  test_notifications.py
nginx/: Dockerfile  nginx-entrypoint.sh  nginx.default.conf
python_docker/: Dockerfile  entrypoint-dev.sh  entrypoint.sh
stocker/notifications/: apps.py  models.py  serializers.py  services.py  tasks.py  views.py
stocker/notifications/migrations/: 0001_initial.py  0005_populate_model_defaults.py  populate_model_defaults.py
stocker/notifications/tests/: conftest.py  test_api.py  test_notifications.py
